[package]
name = "campaignit"
version = "0.1.0"
edition = "2024"

[dependencies]
ollama-rs = { version = "0.3.1", features = ["tokio"] }
rand = "0.9.1"
schemars = { version = "0.8.22"}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
